tests/test107.rael.exp
Error [2:1]: 'break' is outside of a loop
| break
| ^
