tests/test107.rael
log 22
break
log 88